# llvm-project

clang/lib/Headers/: immintrin.h
llvm/docs/: AMDGPUUsage.rst
llvm/include/llvm/CodeGen/: ScheduleDAGMutation.h
llvm/include/llvm/Support/: AMDHSAKernelDescriptor.h
llvm/lib/CodeGen/: MachineScheduler.cpp
mlir/: CMakeLists.txt
mlir/cmake/: FindSQLite3.cmake
mlir/examples/prototypes/: threadwise_gemm.mlir
mlir/include/mlir/: InitAllDialects.h  InitAllPasses.h  InitAllTranslations.h
mlir/include/mlir/Conversion/: Passes.td
mlir/include/mlir/Conversion/GPUCommon/: GPUCommonPass.h
mlir/include/mlir/Conversion/GPUToROCDL/: GPUToROCDLPass.h
mlir/include/mlir/Conversion/GPUToROCm/: GPUToROCmPass.h
mlir/include/mlir/Dialect/: CMakeLists.txt
mlir/include/mlir/Dialect/GPU/: GPUOps.td
mlir/include/mlir/Dialect/LLVMIR/: LLVMOps.td
mlir/include/mlir/Dialect/MIOpenOps/: LowerMIOpenOps.h  MIOpenCPP.h  MIOpenOps.td  Passes.h
mlir/lib/Conversion/: CMakeLists.txt
mlir/lib/Conversion/GPUCommon/: CMakeLists.txt  ConvertKernelFuncToBlob.cpp  ConvertLaunchFuncToRuntimeCalls.cpp  GPUOpsLowering.h
mlir/lib/Conversion/GPUToNVVM/: LowerGpuOpsToNVVMOps.cpp
mlir/lib/Conversion/GPUToROCDL/: LowerGpuOpsToROCDLOps.cpp
mlir/lib/Conversion/GPUToROCm/: CMakeLists.txt  ConvertKernelFuncToHsaco.cpp
mlir/lib/Conversion/VectorToLLVM/: ConvertVectorToLLVM.cpp
mlir/lib/Dialect/: CMakeLists.txt
mlir/lib/Dialect/GPU/IR/: GPUDialect.cpp
mlir/lib/Dialect/MIOpenOps/: LowerMIOpenOps.cpp  MIOpenOps.cpp
mlir/lib/Dialect/Vector/: VectorOps.cpp
mlir/lib/Transforms/: CMakeLists.txt
mlir/test/Conversion/GPUToROCDL/: memory-attrbution.mlir
mlir/test/Conversion/StandardToLLVM/: convert-to-llvmir.mlir
mlir/test/Conversion/VectorToLLVM/: vector-to-llvm.mlir
mlir/test/Dialect/GPU/: invalid.mlir  ops.mlir
mlir/test/Dialect/MIOpen/: affine.mlir  ops.mlir  subview.mlir  test.mlir  test_passthrough.mlir  transform_with_affine.mlir  translate_bwd_data_kcyx_nchw_nkhw.mlir  translate_forward_kcyx_nchw_nkhw.mlir
mlir/test/lib/Transforms/: CMakeLists.txt  TestConvertGPUKernelToCubin.cpp  TestConvertGPUKernelToHsaco.cpp
mlir/test/mlir-rocm-runner/: empty-kernel.mlir  gpu-to-hsaco.mlir  two-modules.mlir  vecadd.mlir
mlir/tools/mlir-cuda-runner/: cuda-runtime-wrappers.cpp  mlir-cuda-runner.cpp
mlir/tools/mlir-opt/: CMakeLists.txt  mlir-opt.cpp
mlir/tools/mlir-rocm-runner/: CMakeLists.txt  mlir-rocm-runner.cpp  rocm-runtime-wrappers.cpp
mlir/tools/mlir-translate/: CMakeLists.txt
(+8 files in other folders)
